[package]
name = "docker_credential"
version = "1.3.2"
authors = ["Keir Lawson <keirlawson@gmail.com>"]
edition = "2018"
description = "Reads a user's docker credentials from config"
license = "MIT OR Apache-2.0"
repository = "https://github.com/keirlawson/docker_credential"
readme = "README.md"
categories = ["authentication", "config"]
keywords = ["docker", "credential", "container"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.7"

[dev-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
rstest = "0.23.0"
